<resources>
    <string name="app_name">MBTI</string>
    <string name="tv_description">Узнай свой тип личности</string>

    <string name="URL">https://psytest-mbti.herokuapp.com</string>
    <string name="tap_again">Нажмите Назад еще раз для выхода</string>

    <!-- app social site links section -->
    <string name="facebook_url">https://www.facebook.com/pg/fandroidinfo/</string>
    <string name="youtube_url">https://www.youtube.com/user/vitaxafication</string>
    <string name="twitter_user_id">twitter://user?user_id=1329640969</string> <!-- find your user id from here: http://gettwitterid.com/  -->
    <string name="twitter_url">https://twitter.com/nepochatoff</string>
    <string name="google_plus_url">https://plus.google.com/u/0/+vitaxafication</string>

    <!-- privacy policy url -->
    <string name="privacy_url">https://docs.google.com/document/d/1ZUrFQwbxDTpg_o9UUx9NtH_JtOSmVuZqD2FTLBJ5qno/edit?usp=sharing</string>

    <!-- privacy policy url -->
    <string name="site_url">/</string>

    <!-- about developer text  -->
    <string name="developer_name">Fandroid.info</string>
    <string name="developer_detail">Уроки по разработке приложений</string>
    <string name="developer_message">Данное приложение является сборником тестов по андроид-программированию. Приложение можно использовать для проверки своих знаний и для подготовки к собеседованию. Это приложение создано в рамках Продвинутого курса по разработке android приложений. Больше информации о наших курсах смотрите на сайте Fandroid.info, YouTube-канале "Start Android" и наших страницах в социальных сетях</string>

    <string name="quiz">Тестирование</string>

    <string name="others">Others</string>
    <string name="site">Fandroid.info</string>
    <string name="privacy">Privacy Policy</string>
    <string name="share">Поделиться</string>
    <string name="rate">Оцените приложение</string>
    <string name="settings">Настройки</string>
    <string name="about_dev">О приложении</string>
    <string name="exit">Выход</string>
    <string name="site_menu_delete_all">Удалить все</string>
    <string name="About">Типология личности Майерс-Бриггс создана на базе типологии Карла Густава Юнга в 1940-х годах двумя американками, Изабель Майерс и Кэтрин Бриггс. На её основе была разработана система психологического тестирования MBTI (Myers-Briggs Type Indicator), относящая людей к одному из 16 типов. Несмотря на недостаточное научное обоснование, система получила широкое практическое распространение и коммерческую успешность в западных странах.</string>
    <string name="nameOfTest">Определитель Юнгианского типа</string>
    <string name="mbti">MBTI</string>

    <string name="close_prompt">Закрыть приложение?</string>
    <string name="delete_all_notification">Удалить все уведомления?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="failed">Ошибка</string>

    <string name="score_card">Результаты</string>
    <string name="score">Верно</string>
    <string name="wrong">Неверно</string>
    <string name="skipped">Пропущено</string>
    <string name="skip_text">Пропустить?</string>
    <string name="skip_prompt">Пропустить этот вопрос?</string>
    <string name="quiz_close_prompt">Закрыть приложение?</string>
    <string name="share_prompt">Поделитесь результатом!</string>
    <string name="share_now">Поделиться</string>
    <string name="sharing_text" formatted="false">Мой результат %d. Проверь себя - </string>
    <string name="play_again">Начать заново</string>
    <string name="your_ans">Ваш ответ:</string>
    <string name="correct_ans">Верный ответ:</string>

    <string name="details_text">Подробно</string>
    <string name="next_question">Следующий вопрос</string>
    <string name="skipped_text">Вы пропустили этот вопрос</string>
    <string name="item_counter" formatted="false">%d / %d</string>
    <string name="no_internet">Интернет соединение недоступно!</string>
    <string name="welcome_text">Проверьте ваши знания!</string>
    <string name="ready_prompt">Вы готовы?</string>
    <string name="quiz_prompt">Тестирование</string>
    <string name="cancel_prompt">Прекратить тестирование?</string>
    <string name="watch_video_prompt">Посмотрите видео для продолжения теста!</string>
    <string name="reward_dialog_title">Еще один шанс?</string>
    <string name="reward_dialog_message">Получить дополнительную попытку после просмотра видео?</string>

    <string name="greeting_text1">Плохо. Подготовьтесь и пробуйте снова.</string>
    <string name="greeting_text2">Хорошо. Но могло быть еще лучше.</string>
    <string name="greeting_text3">Великолепно! Отличный результат!</string>


    <string name="matches">matches</string>
    <string name="title_post">Уведомление</string>
    <string name="notifications">Уведомления</string>
    <string name="read_post">Нажмите для прочтения</string>
    <string name="notification_title">Заголовок: </string>
    <string name="notification_details">Содержание: </string>


    <string name="pref_notification_title">Настройка уведомлений</string>
    <string name="pref_notification_summ">Включить/выключить уведомления</string>
    <string name="pref_zoom_title">Zoom Controller</string>
    <string name="pref_zoom_summ">Enable zoom controller to zoom in/out pages</string>
    <string name="pref_text_title">Размер текста</string>
    <string name="select_size">Выберите размер текста</string>

    <string name="small_text">Маленький</string>
    <string name="default_text">Средний</string>
    <string name="large_text">Большой</string>
    <string name="quiz_promt_third_text">Пройти тест снова?</string>
    <string name="quiz_promt_first_text">Предыдущий результат: %s из %s</string>
    <string name="quiz_question_title">Вопрос %d из %d</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Логин</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_up">Зарегистрироваться</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Некорректный логин</string>
    <string name="invalid_password">Пароль должен быть больше 5 символов</string>
    <string name="login_failed">"Login failed"</string>

    <string name="answer1">Идет получение ответа...</string>
    <string name="answer2">Идет получение ответа...</string>
    <string name="answer3">Идет получение ответа...</string>
    <string name="answer4">Идет получение ответа...</string>
    <string name="answer5">Идет получение ответа...</string>

</resources>
